--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=6610889"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=3948023701" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -25,7 +25,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/llJuBI-Lm29A7Yck0C8G4Jjsd9_z7--WBdQMlQiPZn3feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgtCVoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/wdijOCy7bl5VaLaimklw9UkfQ71ZXN_J1UcH_h21d0JfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgtNLoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -54,7 +54,7 @@ transition:300ms;
    </div>
    <!-- m_editable region-id="editable-static-tag-U30026-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
    <div class="head clearfix colelem" id="u30026-10" data-muse-uid="U30026" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-    <h1 id="u30026-8"><span class="headline-termina-21" id="u30026">Hello, I'm Nitcha or Fame, interdisciplinary </span><a class="nonblock" href="https://nitcha.info/"><span class="headline-termina-21" id="u30026-2">artist</span></a><span class="headline-termina-21" id="u30026-4"> and </span><a class="nonblock" href="work.html#top-work" data-href="anchor:U26666:U28387"><span class="headline-termina-21" id="u30026-5">designer</span></a><span class="headline-termina-21" id="u30026-7">.</span></h1>
+    <h1 id="u30026-8"><span class="headline-termina-21" id="u30026">Hello, I'm Nitcha or Fame, interdisciplinary </span><a class="nonblock" href="about.html" data-href="page:U2777"><span class="headline-termina-21" id="u30026-2">designer</span></a><span class="headline-termina-21" id="u30026-4"> and </span><a class="nonblock" href="https://nitcha.info/"><span class="headline-termina-21" id="u30026-5">artist</span></a><span class="headline-termina-21" id="u30026-7">.</span></h1>
    </div>
    <!-- /m_editable -->
    <div class="clearfix colelem" id="ppu33453"><!-- group -->
@@ -74,7 +74,7 @@ transition:300ms;
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U33488-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33488-7" href="revoke.html" data-href="page:U558" data-muse-uid="U33488" data-muse-type="txt_frame"><!-- content --><p id="u33488-2"><span class="credits-termina-13" id="u33488">WIKIMEDIA FOUNDATION : NEW COMMUNITY RESOURCES GRANTS</span></p><p id="u33488-3">&nbsp;</p><p id="u33488-5"><span class="credits-termina-13" id="u33488-4">Animation Explainers</span></p></a>
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33488-7" href="wikimedia-grants.html" data-href="page:U32939" data-muse-uid="U33488" data-muse-type="txt_frame"><!-- content --><p id="u33488-2"><span class="credits-termina-13" id="u33488">WIKIMEDIA FOUNDATION : NEW COMMUNITY RESOURCES GRANTS</span></p><p id="u33488-3">&nbsp;</p><p id="u33488-5"><span class="credits-termina-13" id="u33488-4">Animation Explainers</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pppu33459"><!-- group -->
@@ -136,7 +136,7 @@ transition:300ms;
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U33492-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33492-9" href="lucid.html" data-href="page:U7977" data-muse-uid="U33492" data-muse-type="txt_frame"><!-- content --><p id="u33492-2"><span class="credits-termina-13" id="u33492">BETWEEN SPACES</span></p><p id="u33492-3">&nbsp;</p><p id="u33492-5"><span class="credits-termina-13" id="u33492-4">Art direction, Exhibition Identity,</span></p><p id="u33492-7"><span class="credits-termina-13" id="u33492-6">Graphic Design, Motion Design</span></p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33492-9" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33492" data-muse-type="txt_frame"><!-- content --><p id="u33492-2"><span class="credits-termina-13" id="u33492">BETWEEN SPACES</span></p><p id="u33492-3">&nbsp;</p><p id="u33492-5"><span class="credits-termina-13" id="u33492-4">Art direction, Exhibition Identity,</span></p><p id="u33492-7"><span class="credits-termina-13" id="u33492-6">Graphic Design, Motion Design</span></p></a>
       <!-- /m_editable -->
      </div>
      <div class="clearfix colelem" id="pppu33486"><!-- group -->
@@ -189,7 +189,7 @@ transition:300ms;
       <a class="nonblock nontext rgba-background clearfix grpelem" id="u33495-16" href="anyways.html" data-href="page:U27669" data-muse-uid="U33495" data-muse-type="txt_frame"><!-- content --><p id="u33495-2"><span class="credits-termina-13" id="u33495">ANYWAYS, HERE'S</span></p><p id="u33495-4"><span class="credits-termina-13" id="u33495-3">THE THING</span></p><p id="u33495-5">&nbsp;</p><p id="u33495-7"><span class="credits-termina-13" id="u33495-6">Art direction,</span></p><p id="u33495-9"><span class="credits-termina-13" id="u33495-8">Identity Design,</span></p><p id="u33495-11"><span class="credits-termina-13" id="u33495-10">Graphic Design,</span></p><p id="u33495-13"><span class="credits-termina-13" id="u33495-12">Motion Design</span></p><p id="u33495-14">&nbsp;</p></a>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U33671-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33671-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33671" data-muse-type="txt_frame"><!-- content --><p id="u33671-2"><span class="credits-termina-13" id="u33671">WONDER COLLAR</span></p><p id="u33671-4"><span class="credits-termina-13" id="u33671-3">Art direction, Design, Fabrication</span></p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33671-6" href="shoulder.html" data-href="page:U30404" data-muse-uid="U33671" data-muse-type="txt_frame"><!-- content --><p id="u33671-2"><span class="credits-termina-13" id="u33671">WONDER COLLAR</span></p><p id="u33671-4"><span class="credits-termina-13" id="u33671-3">Art direction, Design, Fabrication</span></p></a>
       <!-- /m_editable -->
      </div>
      <div class="clearfix colelem" id="pu33472"><!-- group -->
@@ -197,7 +197,7 @@ transition:300ms;
       <a class="nonblock nontext museBGSize grpelem" id="u33472" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33472"><!-- simple frame --></a>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U33674-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33674-7" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33674" data-muse-type="txt_frame"><!-- content --><p><span class="credits-termina-13" id="u33674">MUSKETEERS: UPRISING</span></p><p>&nbsp;</p><p id="u33674-5"><span class="credits-termina-13" id="u33674-4">Art direction, Design, Album cover</span></p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33674-7" href="musketeers.html" data-href="page:U1578" data-muse-uid="U33674" data-muse-type="txt_frame"><!-- content --><p><span class="credits-termina-13" id="u33674">MUSKETEERS: UPRISING</span></p><p>&nbsp;</p><p id="u33674-5"><span class="credits-termina-13" id="u33674-4">Art direction, Design, Album cover</span></p></a>
       <!-- /m_editable -->
      </div>
     </div>
@@ -249,19 +249,19 @@ transition:300ms;
      <div class="pointer_cursor museBGSize clearfix grpelem" id="u33478" data-muse-uid="U33478"><!-- group -->
       <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
       <!-- m_editable region-id="editable-static-tag-U33683-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33683-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33683" data-muse-type="txt_frame"><!-- content --><p id="u33683-2"><span class="credits-termina-13" id="u33683">COLOUR IN WHITE: 25HOURS</span></p><p id="u33683-4"><span class="credits-termina-13" id="u33683-3">Graphic Design, Album Cover</span></p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33683-6" href="phone/25hours.html?devicelock=phone" data-href="page:U11123" data-muse-uid="U33683" data-muse-type="txt_frame"><!-- content --><p id="u33683-2"><span class="credits-termina-13" id="u33683">COLOUR IN WHITE: 25HOURS</span></p><p id="u33683-4"><span class="credits-termina-13" id="u33683-3">Graphic Design, Album Cover</span></p></a>
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U33680-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33680-7" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33680" data-muse-type="txt_frame"><!-- content --><p id="u33680-2"><span class="credits-termina-13" id="u33680">SUDKED-TEDSAKARN</span></p><p id="u33680-3">&nbsp;</p><p id="u33680-5"><span class="credits-termina-13" id="u33680-4">Identity Design, Motion Design</span></p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33680-7" href="sudked.html" data-href="page:U4140" data-muse-uid="U33680" data-muse-type="txt_frame"><!-- content --><p id="u33680-2"><span class="credits-termina-13" id="u33680">SUDKED-TEDSAKARN</span></p><p id="u33680-3">&nbsp;</p><p id="u33680-5"><span class="credits-termina-13" id="u33680-4">Identity Design, Motion Design</span></p></a>
      <!-- /m_editable -->
     </div>
     <!-- m_editable region-id="editable-static-tag-U33479" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext museBGSize grpelem" id="u33479" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33479"><!-- simple frame --></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U33677-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33677-8" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33677" data-muse-type="txt_frame"><!-- content --><p id="u33677-6"><span class="credits-termina-13" id="u33677-4">TEE FOX<br/><br/></span><span class="credits-termina-13" id="u33677-5">Illustration</span></p></a>
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33677-8" href="teefox.html" data-href="page:U3938" data-muse-uid="U33677" data-muse-type="txt_frame"><!-- content --><p id="u33677-6"><span class="credits-termina-13" id="u33677-4">TEE FOX<br/><br/></span><span class="credits-termina-13" id="u33677-5">Illustration</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu26633-4"><!-- group -->
