--- a/bootcampcode.html
+++ b/bootcampcode.html
@@ -16,16 +16,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>BootCampCode</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/bootcampcode.css?crc=119834631" id="pagesheet"/>
-  <!-- Other scripts -->
-  <script type="text/javascript">
-   var __adobewebfontsappname__ = "muse";
-</script>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=227091054"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4054584915"/>
+  <link rel="stylesheet" type="text/css" href="css/bootcampcode.css?crc=398564182" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/aK89_ubeRQBJjyjTWi9N9fmKj2PQ9h9N6CB5wwgC806fe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMYo3xc4g6.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_8c2V-yw0lmmeQ1YUH8boTnYww4ZyUjYeaMNPhPjQ13feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg0-d_Kbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -50,21 +45,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <img class="block" id="u9446_img" src="images/2bootcampcodecat.gif?crc=3995192913" alt="" width="550" height="408" data-muse-src="images/2bootcampcodecat.gif?crc=3995192913"/>
    </div>
    <!-- /m_editable -->
-   <!-- m_editable region-id="editable-static-tag-U9471-BP_infinity" template="bootcampcode.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-   <div class="clearfix colelem" id="u9471-4" data-muse-uid="U9471" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-    <p>This set is practicing works&nbsp; during MFA D+T bootcamp. All of them were done in processing. The cat one on the top is my first code project.</p>
+   <div class="clearfix colelem" id="pu9451"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U9451-BP_infinity" template="bootcampcode.html" data-type="image" -->
+    <div class="clip_frame grpelem" id="u9451" data-muse-uid="U9451" data-muse-type="img_frame"><!-- image -->
+     <img class="block" id="u9451_img" src="images/bootcampcode1circle.gif?crc=4152763038" alt="" width="433" height="311" data-muse-src="images/bootcampcode1circle.gif?crc=4152763038"/>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U9456-BP_infinity" template="bootcampcode.html" data-type="image" -->
+    <div class="clip_frame grpelem" id="u9456" data-muse-uid="U9456" data-muse-type="img_frame"><!-- image -->
+     <img class="block" id="u9456_img" src="images/bootcampcode1line.gif?crc=511333000" alt="" width="433" height="311" data-muse-src="images/bootcampcode1line.gif?crc=511333000"/>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U9471-BP_infinity" template="bootcampcode.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix grpelem" id="u9471-4" data-muse-uid="U9471" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p id="u9471-2"><span class="body-termina-11" id="u9471">This set is practicing works. All of them were done in P5 and processing.</span></p>
+    </div>
+    <!-- /m_editable -->
    </div>
-   <!-- /m_editable -->
-   <!-- m_editable region-id="editable-static-tag-U9456-BP_infinity" template="bootcampcode.html" data-type="image" -->
-   <div class="clip_frame colelem" id="u9456" data-muse-uid="U9456" data-muse-type="img_frame"><!-- image -->
-    <img class="block" id="u9456_img" src="images/bootcampcode1line.gif?crc=511333000" alt="" width="450" height="338" data-muse-src="images/bootcampcode1line.gif?crc=511333000"/>
+   <div class="clearfix colelem" id="pu33697"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U33697-BP_infinity" template="bootcampcode.html" data-type="image" -->
+    <div class="clip_frame grpelem" id="u33697" data-muse-uid="U33697" data-muse-type="img_frame"><!-- image -->
+     <img class="block" id="u33697_img" src="images/code2.gif?crc=525936292" alt="" width="284" height="277" data-muse-src="images/code2.gif?crc=525936292"/>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U33715-BP_infinity" template="bootcampcode.html" data-type="image" -->
+    <div class="clip_frame grpelem" id="u33715" data-muse-uid="U33715" data-muse-type="img_frame"><!-- image -->
+     <img class="block" id="u33715_img" src="images/code7.gif?crc=107714651" alt="" width="296" height="278" data-muse-src="images/code7.gif?crc=107714651"/>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U33708-BP_infinity" template="bootcampcode.html" data-type="image" -->
+    <div class="clip_frame grpelem" id="u33708" data-muse-uid="U33708" data-muse-type="img_frame"><!-- image -->
+     <img class="block" id="u33708_img" src="images/code6.gif?crc=3922178599" alt="" width="260" height="279" data-muse-src="images/code6.gif?crc=3922178599"/>
+    </div>
+    <!-- /m_editable -->
    </div>
-   <!-- /m_editable -->
-   <!-- m_editable region-id="editable-static-tag-U9451-BP_infinity" template="bootcampcode.html" data-type="image" -->
-   <div class="clip_frame colelem" id="u9451" data-muse-uid="U9451" data-muse-type="img_frame"><!-- image -->
-    <img class="block" id="u9451_img" src="images/bootcampcode1circle.gif?crc=4152763038" alt="" width="450" height="338" data-muse-src="images/bootcampcode1circle.gif?crc=4152763038"/>
-   </div>
-   <!-- /m_editable -->
    <div class="clearfix colelem" id="pu26633-4"><!-- group -->
     <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="sporting" id="u26633">nitcha.fame[at]gmail.com</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u26651-4" href="https://vimeo.com/nitchafame"><!-- content --><p id="u26651-2"><span class="sporting" id="u26651">VIMEO</span></p></a>
