--- a/labs.html
+++ b/labs.html
@@ -16,11 +16,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Labs</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4091296754" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=227091054"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4054584915"/>
+  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4238673526" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/gkyax4assqAfOt-g8n9kXJj03uuitJJJmoad3dKZax9feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgvSVoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/levpwlBwVhAJ6WPIR-6yxj6iygEUaw0s6zBIGHz3bRwfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg0Hd_Kbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -76,7 +76,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u33385" href="repitation-in-glsl.html" data-href="page:U14563" data-muse-uid="U33385" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u33385_img" src="images/glslpattern2.gif?crc=407889597" alt="" width="239" height="240" data-muse-src="images/glslpattern2.gif?crc=407889597"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U33666-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33666-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U33666" data-muse-type="txt_frame"><!-- content --><p id="u33666">&nbsp;</p><p id="u33666-2">&nbsp;</p><p id="u33666-4"><span class="headline-termina-21" id="u33666-3">Repetition</span></p><p id="u33666-6"><span class="body-termina-11" id="u33666-5">GLSL Shader</span></p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33666-8" href="repitation-in-glsl.html" data-href="page:U14563" data-muse-uid="U33666" data-muse-type="txt_frame"><!-- content --><p id="u33666">&nbsp;</p><p id="u33666-2">&nbsp;</p><p id="u33666-4"><span class="headline-termina-21" id="u33666-3">Repetition</span></p><p id="u33666-6"><span class="body-termina-11" id="u33666-5">GLSL Shader</span></p></a>
      <!-- /m_editable -->
     </div>
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
@@ -108,6 +108,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u24783-8" href="3d.html" data-href="page:U11067" data-muse-uid="U24783" data-muse-type="txt_frame"><!-- content --><p id="u24783">&nbsp;</p><p id="u24783-2">&nbsp;</p><p id="u24783-4"><span class="headline-termina-21" id="u24783-3">Painting in 3D space</span></p><p id="u24783-6"><span class="body-termina-11" id="u24783-5">3D</span></p></a>
      <!-- /m_editable -->
     </div>
+    <!-- m_editable region-id="editable-static-tag-U33726-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u33726-6" data-muse-uid="U33726" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p id="u33726-4"><span class="credits-termina-13" id="u33726">More of my personal projects and art practices: </span><a class="nonblock" href="https://nitcha.info/"><span class="credits-termina-13" id="u33726-2">here</span></a></p>
+    </div>
+    <!-- /m_editable -->
     <a class="nonblock nontext clearfix colelem" id="u26645-4" href="https://www.instagram.com/nitchafame/"><!-- content --><p id="u26645-2"><span class="sporting" id="u26645">IG</span></p></a>
    </div>
   </div>
