--- a/unitylab.html
+++ b/unitylab.html
@@ -16,16 +16,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>UnityLab</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/unitylab.css?crc=4188795235" id="pagesheet"/>
-  <!-- Other scripts -->
-  <script type="text/javascript">
-   var __adobewebfontsappname__ = "muse";
-</script>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=227091054"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4054584915"/>
+  <link rel="stylesheet" type="text/css" href="css/unitylab.css?crc=149953080" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/Tw6XtRimaNQ73eQh7McFwc-Nt5h2QrXHzQjybErOb89fe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMY_3xc4g6.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/8AlOQsUmpG7L2tIH_zox2ioE2WK0bj_x9hrWG3HGMowfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg07d_Kbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -48,36 +43,35 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix colelem" id="pu10853"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U10853-BP_infinity" template="unitylab.html" data-type="image" -->
     <div class="clip_frame grpelem" id="u10853" data-muse-uid="U10853" data-muse-type="img_frame"><!-- image -->
-     <img class="block" id="u10853_img" src="images/nyc.gif?crc=102877672" alt="" width="595" height="315" data-muse-src="images/nyc.gif?crc=102877672"/>
+     <img class="block" id="u10853_img" src="images/nyc.gif?crc=102877672" alt="" width="643" height="340" data-muse-src="images/nyc.gif?crc=102877672"/>
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U10876-BP_infinity" template="unitylab.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix grpelem" id="u10876-5" data-muse-uid="U10876" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>This set is a small project, which all were done in Unity, C# code, modeled in Maya and Sculptris and be a part of Building world class, MFA D+T Parsons The New School for Design.</p>
+     <p id="u10876-2"><span class="body-termina-11" id="u10876">This set is a small project, which all were done in Unity, C# code, modeled in Maya and Sculptris.</span></p>
      <p>&nbsp;</p>
     </div>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix colelem" id="pu10878-7"><!-- group -->
+   <div class="clearfix colelem" id="pu10878-4"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U10878-BP_infinity" template="unitylab.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix grpelem" id="u10878-7" data-muse-uid="U10878" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>This work is in the theme of New York City. I used 4 symbols that represent the city perfectly, which are taxi, building, trashcan, and rat.</p>
-     <p>&nbsp;</p>
-     <p>I used instantiate code&nbsp; to clone the original model.</p>
+    <div class="clearfix grpelem" id="u10878-4" data-muse-uid="U10878" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p id="u10878-2"><span class="body-termina-11" id="u10878">This work is in the theme of New York City. I used selected symbols that represent the city perfectly, which are taxi, building, trashcan, and rat. Then used instantiate code&nbsp; to clone the original models to create the city scape.</span></p>
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U10909-BP_infinity" template="unitylab.html" data-type="image" -->
-    <div class="clip_frame grpelem" id="u10909" data-muse-uid="U10909" data-muse-type="img_frame"><!-- image -->
-     <img class="block" id="u10909_img" src="images/modelingrat.gif?crc=3836970990" alt="" width="273" height="180" data-muse-src="images/modelingrat.gif?crc=3836970990"/>
+    <div class="clearfix grpelem" id="pu10909"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U10909-BP_infinity" template="unitylab.html" data-type="image" -->
+     <div class="clip_frame colelem" id="u10909" data-muse-uid="U10909" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u10909_img" src="images/modelingrat.gif?crc=3836970990" alt="" width="273" height="180" data-muse-src="images/modelingrat.gif?crc=3836970990"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U10916-BP_infinity" template="unitylab.html" data-type="image" -->
+     <div class="clip_frame colelem" id="u10916" data-muse-uid="U10916" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u10916_img" src="images/modelingtaxi.gif?crc=3846929630" alt="" width="272" height="144" data-muse-src="images/modelingtaxi.gif?crc=3846929630"/>
+     </div>
+     <!-- /m_editable -->
     </div>
-    <!-- /m_editable -->
    </div>
-   <!-- m_editable region-id="editable-static-tag-U10916-BP_infinity" template="unitylab.html" data-type="image" -->
-   <div class="clip_frame colelem" id="u10916" data-muse-uid="U10916" data-muse-type="img_frame"><!-- image -->
-    <img class="block" id="u10916_img" src="images/modelingtaxi.gif?crc=3846929630" alt="" width="272" height="144" data-muse-src="images/modelingtaxi.gif?crc=3846929630"/>
-   </div>
-   <!-- /m_editable -->
-   <div class="colelem" id="u10921"><!-- simple frame --></div>
    <!-- m_editable region-id="editable-static-tag-U10858-BP_infinity" template="unitylab.html" data-type="image" -->
    <div class="clip_frame colelem" id="u10858" data-muse-uid="U10858" data-muse-type="img_frame"><!-- image -->
     <img class="block" id="u10858_img" src="images/rubegoldberg.gif?crc=4232480959" alt="" width="550" height="342" data-muse-src="images/rubegoldberg.gif?crc=4232480959"/>
@@ -85,7 +79,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <!-- /m_editable -->
    <!-- m_editable region-id="editable-static-tag-U10922-BP_infinity" template="unitylab.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
    <div class="clearfix colelem" id="u10922-4" data-muse-uid="U10922" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-    <p>Rubegoldberg</p>
+    <p id="u10922-2"><span class="body-termina-11" id="u10922">Rubegoldberg</span></p>
    </div>
    <!-- /m_editable -->
    <div class="clearfix colelem" id="pu26633-4"><!-- group -->
