--- a/labs.html
+++ b/labs.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Labs</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=227091054"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4054584915"/>
-  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4238673526" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=221347371"/>
+  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=389594693" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/levpwlBwVhAJ6WPIR-6yxj6iygEUaw0s6zBIGHz3bRwfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg0Hd_Kbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/8UR1by0adL-Y19oxUiAJqBrT1id3Tpvusk39RoehMaIfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg1nR_Kbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -71,7 +71,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u11500-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U11500" data-muse-type="txt_frame"><!-- content --><p id="u11500">&nbsp;</p><p id="u11500-2">&nbsp;</p><p id="u11500-4"><span class="headline-termina-21" id="u11500-3">Draw Dream</span></p><p id="u11500-6"><span class="body-termina-11" id="u11500-5">Illustrations</span></p></a>
      <!-- /m_editable -->
     </div>
-    <div class="clearfix colelem" id="pu33385"><!-- group -->
+    <div class="clearfix colelem" id="ppu33799"><!-- group -->
+     <div class="clearfix grpelem" id="pu33799"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U33799-BP_infinity" template="labs.html" data-type="image" -->
+      <div class="clip_frame clearfix grpelem" id="u33799" data-muse-uid="U33799" data-muse-type="img_frame"><!-- image -->
+       <img class="position_content" id="u33799_img" src="images/shader.gif?crc=503180381" alt="" width="244" height="244" data-muse-src="images/shader.gif?crc=503180381"/>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U33808-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33808-8" href="bioshader.html" data-href="page:U33773" data-muse-uid="U33808" data-muse-type="txt_frame"><!-- content --><p id="u33808">&nbsp;</p><p id="u33808-2">&nbsp;</p><p id="u33808-4"><span class="headline-termina-21" id="u33808-3">Bio Shader</span></p><p id="u33808-6"><span class="body-termina-11" id="u33808-5">GLSL Shader, Unity</span></p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- m_editable region-id="editable-static-tag-U33385-BP_infinity" template="labs.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u33385" href="repitation-in-glsl.html" data-href="page:U14563" data-muse-uid="U33385" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u33385_img" src="images/glslpattern2.gif?crc=407889597" alt="" width="239" height="240" data-muse-src="images/glslpattern2.gif?crc=407889597"/></a>
      <!-- /m_editable -->
